--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     </div>
     <div class="bottom">
         <h3>About Me</h3>
-        <ul>
-            <li>Contact: 9759265480</li>
-        </ul>
+        <p>Contact: 9759265480</p>
     </div>
 </body>
 </html>
